--- a/fiftyone.yml
+++ b/fiftyone.yml
@@ -1,6 +1,6 @@
 name: "@fiftyone_video_creator/fiftyone_video_creator"
-description: Create video assets from grouped datasets by stitching frame sequences per scene and sensor
-version: 1.0.0
+description: Create video assets from grouped datasets with auto-complete field selection and smart FPS calculation
+version: 1.1.3
 fiftyone:
   version: "*"
 url: https://github.com/danielgural/fiftyone_video_creator
